--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">WikiFive</string>
+    <string name="app_name">WIKIPEDIA</string>
     <string name="search">Search</string>
 </resources>
